all complted hosting pending
